--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .phpintel/628744a53b6c6bedbc527a9fe0c87cea
 .phpintel/7179461eebcdf6984c70cc51ede224a0
 .phpintel/a960ac7c131689d4efcd6b8a08ce728c
+.phpintel/9f29e07898959a0eee47a2e0a9d09c19
