--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .phpintel/7179461eebcdf6984c70cc51ede224a0
 .phpintel/a960ac7c131689d4efcd6b8a08ce728c
 .phpintel/9f29e07898959a0eee47a2e0a9d09c19
+.phpintel/921d69c92b41cb439087cfd5c1ae3b29
